[package]
name = "git-reduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
git2 = "0.17.0"

[dev-dependencies]
duct = "0.13.6"
tempdir = "0.3.7"
testresult = "0.3.0"
