[package]
name = "git-squash-range"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["git2"]

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
git2 = { version = "0.17.0", optional = true }
gix = { version = "0.43.1", optional = true }

[dev-dependencies]
duct = "0.13.6"
tempdir = "0.3.7"
testresult = "0.3.0"
